--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Портфоло Мочалов Егор </title>
+    <title>Портфолио:Мочалов Егор </title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Nerko+One&family=Open+Sans+Condensed:wght@300&family=Open+Sans:wght@300&family=Texturina:wght@200&display=swap" rel="stylesheet">
@@ -20,18 +20,14 @@
     </div>
     <div class="bio container">
       <h2>Давайте познакомимся</h2>
-      <figure class="user">
         <img src="https://sun9-7.userapi.com/impf/lHtbN6VrKAOBqXwEuxm9oBmDfTQpU8xHnFpDOQ/B87jVNd0VQ0.jpg?size=1201x1039&quality=96&proxy=1&sign=a3e4b884f5db3c81379e09658770807a" alt="">
-      </figure>
       <h3>Пара слов о себе</h3>
       <ul>
-        <li>
-          Учусь в городе Ярославле,на 2 курсе по наврпавлению <q>ПИЭ</q>
-        </li>
+        <li>Учусь в городе Ярославле,на 2 курсе по наврпавлению <q>ПИЭ</q></li>
       </ul>
       <h3>Чем могу быть полезен</h3>
       <ul>
-          <li>Могу сверстать страницу с шблона из фотошепа</li>
+          <li>Умею верстать страницы с шблона из фотошепа</li>
       </ul>
     </div>
   </body>
