--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href="mailto:enot_neopoznanniy@gmail.com" class="header-email">&#9993 egor18mochalov@yandex.ru</a>
         <a href="tel:+79159956141" class="header-phone">&#9742 +7 987 654 32 10</a>
     </header>
+    <main>
     <div class="opisanie container">
       <section>
       <h1>Портфолио</h1>
@@ -30,5 +31,17 @@
           <li>Умею верстать страницы с шблона из фотошепа</li>
       </ul>
     </div>
+    </main>
+    <footer>
+      <div class="footer1">
+        <div class="cop">
+          &#169 2020
+        </div>
+        <div class="footer">
+        <a href="mailto:enot_neopoznanniy@gmail.com" class="header-email">&#9993 egor18mochalov@yandex.ru</a>
+        <a href="tel:+79159956141" class="header-phone">&#9742 +7 987 654 32 10</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
