--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
       <ul>
           <li>Умею верстать страницы с шблона из фотошепа</li>
       </ul>
+      <h3>Мои навыки</h3>
+      <dl>
+      <dt class="skillh">HTML</dt>
+      <dd><div style="width:60%"></div></dd>
+      <dt class="skillc">CSS</dt>
+      <dd><div style="width:30%"></div></dd>
+    </dl>
+    </div>
+    <div class="rabota container">
+      <h2>Мои работы</h2>
     </div>
     </main>
     <footer>
