--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
     </div>
     <div class="rabota container">
       <h2>Мои работы</h2>
+      <h3>Сайт инструктора кекса</h3>
+      <a href="source/project/index.html"><img src="project.jpg" width="928" height="536" alt="Cайт инструктора Кекса"></a>
+      <h3>Элипсед</h3>
+      <a href="source/project/index.html"><img src="Снимок.PNG" width="928" height="536" alt="Элипсед"></a>
     </div>
     </main>
     <footer>
