--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </ul>
       <h3>Чем могу быть полезен</h3>
       <ul>
-          <li>Умею верстать страницы с шблона из фотошепа</li>
+          <li>Умею верстать страницы по шаблону из фотошопа</li>
       </ul>
       <h3>Мои навыки</h3>
       <dl>
