--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       <h3>Мои навыки</h3>
       <dl>
       <dt class="skillh">HTML</dt>
-      <dd><div style="width:60%"></div></dd>
+      <dd class="h"><div style="width:60%"></div></dd>
       <dt class="skillc">CSS</dt>
-      <dd><div style="width:30%"></div></dd>
+      <dd class="c"><div style="width:40%"></div></dd>
     </dl>
     </div>
     <div class="rabota container">
