--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Nerko+One&family=Open+Sans+Condensed:wght@300&family=Open+Sans:wght@300&family=Texturina:wght@200&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="osnova">
     <header>
-        <a href="mailto:enot_neopoznanniy@gmail.com" class="header-email">&#9993 egor18mochalov@yandex.ru</a>
-        <a href="tel:+79159956141" class="header-phone">&#9742 +7 915 995 61 41</a>
+        <span class="t"><a href="mailto:enot_neopoznanniy@gmail.com" class="header-emai">&#9993 egor18mochalov@yandex.ru</a>
+              <a href="tel:+79159956141" class="header-phone">&#9742 +7 915 995 61 41</a>
+        </span>
+        <button type="button" name="button" class='butto'>Изменить стиль</button>
     </header>
     <main>
     <div class="opisanie container">
@@ -44,6 +46,113 @@
       <a href="source/project/index.html"><img src="project.jpg" width="928" height="536" alt="Cайт инструктора Кекса"></a>
       <h3>Элипсед</h3>
       <a href="source/project2/site.html"><img src="Снимок.PNG" width="928" height="536" alt="Элипсед"></a>
+      <h3>Пиксельарт</h3>
+      <div class="a">
+      <div class="o">
+      <select class="chosen-color" name="chosen-color">
+            <option value="black">Чёрный</option>
+            <option value="white">Белый</option>
+            <option value="grey">Серый</option>
+            <option value="pink">Розовый</option>
+            <option value="red">Красный</option>
+            <option value="darkorange">Оранжевый</option>
+            <option value="saddlebrown">Коричневый</option>
+            <option value="yellow">Золотой</option>
+            <option value="greenyellow">Салатовый</option>
+            <option value="forestgreen">Зелёный</option>
+            <option value="aquamarine">Аквамарин</option>
+            <option value="lightskyblue">Голубой</option>
+            <option value="lightsteelblue">Серо-голубой</option>
+            <option value="darkblue">Тёмно-синий</option>
+            <option value="indigo">Индиго</option>
+            <option value="mediumpurple">Фиолетовый</option>
+            <option value="purple">Пурпурный</option>
+          </select>
+          <button type="button" name="button" class="sd">Ластик</button>
+          </div>
+    <div class="ok">
+      <span class="d">
+        <div class="button"></div>
+        <div class="button"></div>
+        <div class="button"></div>
+        <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      </span>
+      <span class="d">
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+        <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      </span>
+      <span class="d">
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      </span>
+      <span class="d">
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      </span>
+      <span class="d">
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      </span>
+      <span class="d">
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      </span>
+      <span class="d">
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      </span>
+      <span class="d">
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      <div class="button"></div>
+      </span>
+    </div>
+    </div>
     </div>
     </main>
     <footer>
@@ -57,5 +166,7 @@
         </div>
       </div>
     </footer>
+    <script src="fg.js"></script>
+    <script src="gh.js"></script>
   </body>
 </html>
