--- a/index.html
+++ b/index.html
@@ -42,11 +42,29 @@
     </div>
     <div class="rabota container">
       <h2>Мои работы</h2>
-      <h3>Сайт инструктора кекса</h3>
+      <div class="mn">
+        <h3>Сайт инструктора кекса</h3>
+        <div class="h">
+          <img src="2.png"  class='g' alt="">
+          <span class="q">0</span>
+        </div>
+      </div>
       <a href="source/project/index.html"><img src="project.jpg" width="928" height="536" alt="Cайт инструктора Кекса"></a>
-      <h3>Элипсед</h3>
+      <div class="mn">
+        <h3>Элипсед</h3>
+        <div class="h">
+          <img src="2.png"  class='gg' alt="">
+          <span class="qq">0</span>
+        </div>
+      </div>
       <a href="source/project2/site.html"><img src="Снимок.PNG" width="928" height="536" alt="Элипсед"></a>
-      <h3>Пиксельарт</h3>
+      <div class="mn">
+        <h3>Пиксель арт</h3>
+        <div class="h">
+          <img src="2.png"  class='ggg' alt="">
+          <span class="qqq">0</span>
+        </div>
+      </div>
       <div class="a">
       <div class="o">
       <select class="chosen-color" name="chosen-color">
@@ -168,5 +186,6 @@
     </footer>
     <script src="fg.js"></script>
     <script src="gh.js"></script>
+    <script src="t.js"></script>
   </body>
 </html>
