--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <h3>Мои навыки</h3>
       <dl>
       <dt class="skillh">HTML</dt>
-      <dd class="h"><div style="width:60%"></div></dd>
+      <dd class=""><div style="width:60%"></div></dd>
       <dt class="skillc">CSS</dt>
       <dd class="c"><div style="width:40%"></div></dd>
     </dl>
