--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <main >
       <div>
-      <input type="image" name="bu" class='ty dis' style="position:fixed; width:60px; margin-left:95%; margin-top:35%;" src="https://cintera.ru/assets/cintera/Icons/SVG/ArrowTop.svg">
+      <input type="image" name="bu" class='ty dis' style="position:fixed; width:60px; bottom:30px; right:20px;" src="https://cintera.ru/assets/cintera/Icons/SVG/ArrowTop.svg">
     <div class="opisanie container">
       <section>
       <h1>Портфолио</h1>
@@ -192,6 +192,8 @@
     </div>
     </div>
     </div>
+
+    </div>
     <section style="margin:0 auto; max-width:928px;">
       <h3 id="comment">Комментарии :</h3>
       <ol class="ul" style=" padding:25px; border:2px solid lightgray" >
@@ -200,10 +202,10 @@
     </section>
     <section style="margin:0 auto; max-width:928px; text-align:left">
       <form  action="index.html" method="post" class="sub" style="margin-top:20px;">
-        <fieldset style="display:flex">
+        <fieldset style="display:flex; align-items:center; min-width:100px;">
           <legend>Ваш комментарий</legend>
-        <textarea  cols="80" class="text"></textarea>
-        <input type="submit" value="Отправить" style="height:60%; margin-top:auto;margin-left:10px;">
+        <input type="text" class="text" style="box-sizing:border-box; flex-grow:1; min-width:50px; padding:10px;"></input>
+        <input type="submit" value="Отправить" style="margin-left:10px; flex-shrink:0;">
         </fieldset>
       </form>
     </section>
