--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <meta charset="utf-8">
     <title>Портфолио:Мочалов Егор </title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Nerko+One&family=Open+Sans+Condensed:wght@300&family=Open+Sans:wght@300&family=Texturina:wght@200&display=swap" rel="stylesheet">
+    <link rel="icon" href="https://p7.hiclipart.com/preview/118/239/709/clip-art-computer-icons-animated-film-gif-desktop-wallpaper-anime-movies-folder-icon.jpg" type="icon">
   </head>
   <body class="osnova">
     <header>
       <nav>
         <div class="t">
           <ul>
-          <li><a href="mailto:enot_neopoznanniy@gmail.com" >&#9993 egor18mochalov@yandex.ru</a></li>
-              <li><a href="tel:+79159956141" class="header-phone">&#9742 +7 915 995 61 41</a></li>
+          <li><a style="color:lightgray;cursor:default;" href="mailto:enot_neopoznanniy@gmail.com" >&#9993 egor18mochalov@yandex.ru</a></li>
+              <li><a href="tel:+79159956141" style="color:lightgray;cursor:default;" class="header-phone">&#9742 +7 915 995 61 41</a></li>
             </ul>
         </div>
         <div class="but">
@@ -24,7 +23,7 @@
             <li><a href="#comment">Оставить комментарий</a></li>
           </ul>
         </div>
-        <button type="button" name="button" class='butto'>Изменить стиль</button>
+        <button type="button" name="button" class='butto' style="">Изменить стиль</button>
       </div>
       </nav>
     </header>
@@ -37,20 +36,30 @@
       <p>Junior верстальщик</p>
     </section>
     </div>
-    <div class="bio container">
+    <div class="bio container" >
       <h2>Давайте познакомимся</h2>
-        <img src="https://sun9-7.userapi.com/impf/lHtbN6VrKAOBqXwEuxm9oBmDfTQpU8xHnFpDOQ/B87jVNd0VQ0.jpg?size=1201x1039&quality=96&proxy=1&sign=a3e4b884f5db3c81379e09658770807a" alt="">
+      <div style=" height:600px; display:flex; position:relative;margin-bottom:80px">
+        <div class="cl1">
+        </div>
+        <div class="cl2">
+        </div>
+        <div class="cl3">
+        </div>
+        <div class="cl4">
+        </div>
+        <div class="m" style="z-index:1; position:relative; border-radius:3px;"><img class="" style="transition: transform 0.5s ease; width:100%;height:100%; display:block; " src="https://sun9-7.userapi.com/impf/lHtbN6VrKAOBqXwEuxm9oBmDfTQpU8xHnFpDOQ/B87jVNd0VQ0.jpg?size=1201x1039&quality=96&proxy=1&sign=a3e4b884f5db3c81379e09658770807a" alt="" ></div>
+      </div>
         <div id="div">
         </div>
-      <h3 id="bio">Пара слов о себе</h3>
-      <ul >
+      <h3 id="bio" style="margin-top: 45px;margin-bottom: 20px; text-align:center;">Пара слов о себе</h3>
+      <ul>
         <li>Учусь в городе Ярославле,на 2 курсе по наврпавлению <q>ПИЭ</q></li>
       </ul>
-      <h3>Чем могу быть полезен</h3>
+      <h3 style="margin-top: 45px;margin-bottom: 20px; text-align:center;">Чем могу быть полезен</h3>
       <ul>
           <li>Умею верстать страницы по шаблону из фотошопа</li>
       </ul>
-      <h3>Мои навыки</h3>
+      <h3 style="width:50%;margin:0 auto;margin-top: 45px;margin-bottom: 20px; text-align:center;">Мои навыки</h3>
       <dl>
       <dt class="skillh">HTML</dt>
       <dd class="hh"><div style="width:60%"></div></dd>
@@ -60,34 +69,34 @@
     </div>
     <div id="rabota" style="position:relative; top:250px;">
       </div>
-    <div class="rabota container">
+    <div class="rabota container" style="border:none;background-color:white;box-shadow: 0 0px 5px 3px lightgray;margin-top:170px;">
       <h2>Мои работы</h2>
-      <div class="mn">
-        <h3>Сайт инструктора кекса</h3>
-        <div class="h">
+      <div style="border-bottom:3px dashed orange;border-top:3px dashed orange;overflow: hidden;">
+        <h3 style="text-align:center">Сайт инструктора кекса</h3>
+        <!--<div class="h">
           <img src="2.png"  class='g' alt="">
           <span class="q">0</span>
-        </div>
-      </div>
+        </div>-->
       <a href="source/project/index.html"><img src="project.jpg" width="928" height="536" alt="Cайт инструктора Кекса"></a>
-      <div class="mn">
-        <h3>Элипсед</h3>
-        <div class="h">
+    </div>
+      <div style="border-bottom:3px dashed orange;overflow: hidden;">
+        <h3 style="text-align:center">Элипсед</h3>
+        <!--<div class="h">
           <img src="2.png"  class='gg' alt="">
           <span class="qq">0</span>
-        </div>
-      </div>
+        </div>-->
       <a href="source/project2/site.html"><img src="Снимок.PNG" width="928" height="536" alt="Элипсед"></a>
-      <div class="mn">
-        <h3>Пиксель арт</h3>
-        <div class="h">
+    </div>
+    <div style="border-bottom:3px dashed orange;overflow: hidden;">
+        <h3 style="text-align:center">Пиксель арт</h3>
+        <!--<div class="h">
           <img src="2.png"  class='ggg' alt="">
           <span class="qqq">0</span>
-        </div>
-      </div>
+        </div>-->
       <div class="a">
-      <div class="o">
-      <select class="chosen-color" name="chosen-color">
+      <div class="o" style="align-items:flex-end; margin-bottom:2px;padding:0;">
+        <input type="color" class="chosen-color" name="" value="">
+      <!--<select class="chosen-color" name="chosen-color">
             <option value="black">Чёрный</option>
             <option value="white">Белый</option>
             <option value="grey">Серый</option>
@@ -105,104 +114,107 @@
             <option value="indigo">Индиго</option>
             <option value="mediumpurple">Фиолетовый</option>
             <option value="purple">Пурпурный</option>
-          </select>
-          <label><input type="checkbox" class="sd" > Ластик</label>
+          </select>-->
+          <label style="margin-bottom:-3px;padding:0;"><input type="checkbox" class="sd" > Ластик</label>
           </div>
-    <div class="ok">
-      <span class="d">
-        <div class="button"></div>
-        <div class="button"></div>
-        <div class="button"></div>
-        <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      </span>
-      <span class="d">
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-        <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      </span>
-      <span class="d">
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      </span>
-      <span class="d">
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      </span>
-      <span class="d">
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      </span>
-      <span class="d">
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      </span>
-      <span class="d">
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      </span>
-      <span class="d">
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      <div class="button"></div>
-      </span>
+          <div class="ok">
+    <table>
+      <tr class="d">
+        <td class="button"></td>
+        <td class="button"></td>
+        <td class="button"></td>
+        <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+    </tr>
+      <tr class="d" >
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+        <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+    </tr>
+      <tr class="d">
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+    </tr>
+      <tr class="d">
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+    </tr>
+      <tr class="d">
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+    </tr>
+      <tr class="d">
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+    </tr>
+      <tr class="d">
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+    </tr>
+      <tr class="d">
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+      <td class="button"></td>
+    </tr>
+    </table>
+  </div>
+  </div>
     </div>
     </div>
-    </div>
-
+  </div>
     </div>
     <section style="margin:0 auto; max-width:928px;">
-      <h3 id="comment">Комментарии :</h3>
-      <ol class="ul" style=" padding:25px; border:2px solid lightgray" >
+      <h3 id="comment" style="text-align:center;margin-top:60px;">Комментарии</h3>
+      <ol class="ul" style=" padding:25px; " >
         <li>dfdf</li>
       </ol>
     </section>
     <section style="margin:0 auto; max-width:928px; text-align:left">
       <form  action="index.html" method="post" class="sub" style="margin-top:20px;">
-        <fieldset style="display:flex; align-items:center; min-width:100px;">
+        <fieldset style="display:flex; align-items:center; min-width:100px; ">
           <legend>Ваш комментарий</legend>
         <input type="text" class="text" style="box-sizing:border-box; flex-grow:1; min-width:50px; padding:10px;"></input>
         <input type="submit" value="Отправить" style="margin-left:10px; flex-shrink:0;">
