--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <span class="q">0</span>
         </div>-->
       <a href="source/project/index.html"><img src="project.jpg" width="928" height="536" alt="Cайт инструктора Кекса"></a>
-    </div>
+      </div>
       <div style="border-bottom:3px dashed orange;overflow: hidden;">
         <h3 style="text-align:center">Элипсед</h3>
         <!--<div class="h">
@@ -96,7 +96,7 @@
       <div class="a">
       <div class="o" style="align-items:flex-end; margin-bottom:2px;padding:0;">
         <input type="color" class="chosen-color" name="" value="">
-      <!--<select class="chosen-color" name="chosen-color">
+        <!--<select class="chosen-color" name="chosen-color">
             <option value="black">Чёрный</option>
             <option value="white">Белый</option>
             <option value="grey">Серый</option>
@@ -202,10 +202,18 @@
     </table>
   </div>
   </div>
-    </div>
-    </div>
   </div>
-    </div>
+  <div style="border-bottom:3px dashed orange;overflow: hidden;">
+    <h3 style="text-align:center">SCANDI</h3>
+    <!--<div class="h">
+      <img src="2.png"  class='g' alt="">
+      <span class="q">0</span>
+    </div>-->
+  <a href="source/Maket/Maket.html"><img src="source/Maket/Снимок.PNG" width="928" height="536" alt="SCANDI"></a>
+  </div>
+  </div>
+  </div>
+    <div>
     <section style="margin:0 auto; max-width:928px;">
       <h3 id="comment" style="text-align:center;margin-top:60px;">Комментарии</h3>
       <ol class="ul" style=" padding:25px; " >
@@ -216,7 +224,7 @@
       <form  action="index.html" method="post" class="sub" style="margin-top:20px;">
         <fieldset style="display:flex; align-items:center; min-width:100px; ">
           <legend>Ваш комментарий</legend>
-        <input type="text" class="text" style="box-sizing:border-box; flex-grow:1; min-width:50px; padding:10px;"></input>
+        <input type="text" class="text" style="box-sizing:border-box; flex-grow:1; min-width:50px; padding:10px;">
         <input type="submit" value="Отправить" style="margin-left:10px; flex-shrink:0;">
         </fieldset>
       </form>
