--- a/index.html
+++ b/index.html
@@ -201,6 +201,14 @@
     </tr>
     </table>
   </div>
+  <div style="border-bottom:3px dashed orange;overflow: hidden;">
+    <h3 style="text-align:center">Евклид</h3>
+    <!--<div class="h">
+      <img src="2.png"  class='gg' alt="">
+      <span class="qq">0</span>
+    </div>-->
+  <a href="source/Евклид/index.html"><img src="21.png" width="928" height="536" alt="Евклид"></a>
+</div>
   </div>
   </div>
   <div style="border-bottom:3px dashed orange;overflow: hidden;">
