--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <img src="2.png"  class='gg' alt="">
       <span class="qq">0</span>
     </div>-->
-  <a href="source/Евклид/index.html"><img src="21.PNG" width="928" height="536" alt="Евклид"></a>
+  <a href="source/14_accessibility/index.html"><img src="21.PNG" width="928" height="536" alt="Евклид"></a>
 </div>
   </div>
   </div>
