--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Blanchart</title>
+
+      <link type="image/png" sizes="16x16" rel="icon" href="img/Лого16.png">
+      <link type="image/png" sizes="32x32" rel="icon" href="img/Лого32.png">
+      <link type="image/png" sizes="96x96" rel="icon" href="img/Лого96.png">
+
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/choices.min.css">
       <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.css" />
