--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         </div>
         <div class="section-description__content container">
           <div class="section-description__content-container">
-            <h1 class="section-description__title">Прикоснитесь к прекрасному</h1>
+            <h1 class="section-description__title">Прикоснитесь<br class="br320" style="display: none;"> к прекрасному</h1>
             <p class="section-description__text">Мы вынуждены отталкиваться от того, что реализация намеченных плановых заданий создаёт предпосылки для новых предложений.</p>
             <button class="section-description__button button">Подписаться на рассылку</button>
           </div>
