--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
       background-size: 100% 100%;
     }
     .low{
-      background-image: url("img/low-angle-photo-of-balconies-2462015\ 1.jpg");
+      background-image: url("img/low-angle-photo-of-balconies-2462015\ 1.webp");
     }
     .brow{
-      background-image: url("img/brown-and-blue-glass-building-2093076\ 1.jpg");
+      background-image: url("img/brown-and-blue-glass-building-2093076\ 1.webp");
     }
     .apartament{
-      background-image: url("img/apartment-apartment-building-architecture-building-323705\ 1.jpg");
+      background-image: url("img/apartment-apartment-building-architecture-building-323705\ 1.webp")
     }
     @media(max-width:1256px){
       .low{
-        background-image: url("img/low-angle-photo-of-balconies-2462015\ 2.jpg");
+        background-image: url("img/low-angle-photo-of-balconies-2462015\ 2.webp");
       }
     }
     @media(max-width:1088px){
@@ -113,7 +113,7 @@
           <rect y="10" width="30" height="3" fill="#333333"/>
           <rect y="20" width="30" height="3" fill="#333333"/>
           </svg></div>
-        <a href="" class="section-header__navigation-logo logo"><img src="img/Логотип 1.png" alt="" class="logo__img"></a>
+        <a href="" class="section-header__navigation-logo logo"><img src="img/Логотип 1.png.webp" alt="" class="logo__img"></a>
         <nav class="section-header__navigation-nav section-nav">
           <ul class="section-nav__list">
             <li class="section-nav__list-item"><a href="" class="section-nav__list__item-link">О нас</a></li>
@@ -208,7 +208,7 @@
                 <button class="swipeItem__buttonBlock-item pact">Договор</button>
               </div>
           </div>
-          <img  src="img/Rectangle 18.jpg" alt="" class="swipeItem__img lazyload">
+          <img  src="img/Rectangle 18.webp" alt="" class="swipeItem__img lazyload">
         </div>
 
         <div class="section-aboutWork__content swipeItem hide" data-target="two">
@@ -222,7 +222,7 @@
                 <button class="swipeItem__buttonBlock-item pact">Договор</button>
               </div>
           </div>
-          <img src="img/Rectangle 188.jpg" alt="" class="swipeItem__img lazyload">
+          <img src="img/Rectangle 188.webp" alt="" class="swipeItem__img lazyload">
         </div>
 
         <div class="section-aboutWork__content swipeItem hide" data-target="three">
@@ -236,7 +236,7 @@
                 <button class="swipeItem__buttonBlock-item pact">Договор</button>
               </div>
           </div>
-          <img src="img/Rectangle 19.jpg" alt="" class="swipeItem__img lazyload">
+          <img src="img/Rectangle 19.webp" alt="" class="swipeItem__img lazyload">
         </div>
 
         <div class="section-aboutWork__content swipeItem hide" data-target="four">
@@ -250,7 +250,7 @@
                 <button class="swipeItem__buttonBlock-item pact">Договор</button>
               </div>
           </div>
-          <img src="img/Rectangle 20.jpg" alt="" class="swipeItem__img lazyload">
+          <img src="img/Rectangle 20.webp" alt="" class="swipeItem__img lazyload">
         </div>
       </section>
 
@@ -292,7 +292,7 @@
       <div class="section-footer__content container">
         <section class="section-footer__navigation">
           <nav class="section-footer__navigation-nav section-footer-nav">
-            <a href="" class="section-footer__nav-logo logo"><img src="img/Логотип 2 1.png" alt="" class="logo_img"></a>
+            <a href="" class="section-footer__nav-logo logo"><img src="img/Логотип 2 1.png.webp" alt="" class="logo_img"></a>
             <ul class="section-footer-nav__list">
               <li class="section-footer-nav__list-item">О нас</li>
               <li class="section-footer-nav__list-item">Проекты</li>
