--- a/index.html
+++ b/index.html
@@ -21,14 +21,6 @@
 
     <link rel="stylesheet" href="styles/jquery-ui.css">
 
-    <script  src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
-    <script src="jquery-1.12.4.js"></script>
-    <script defer src="jquery-ui.js"></script>
-
-    <script defer>
-      $(function(){$("#accordion").accordion({header:"li",heightStyle:"content",classes:{"ui-accordion":"","ui-accordion-header":"","ui-accordion-header-active":"","ui-accordion-header-collapsed":"","ui-accordion-icons":"","ui-accordion-header-icon":"","ui-accordion-content":"","ui-accordion-content-active":""}})});
-  </script>
   <style>
     .swiper-container{
       padding-top: 103px;
@@ -333,6 +325,14 @@
       </div>
     </footer>
 
+    <script  src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+    <script src="jquery-1.12.4.js"></script>
+    <script defer src="jquery-ui.js"></script>
+
+    <script defer>
+      $(function(){$("#accordion").accordion({header:"li",heightStyle:"content",classes:{"ui-accordion":"","ui-accordion-header":"","ui-accordion-header-active":"","ui-accordion-header-collapsed":"","ui-accordion-icons":"","ui-accordion-header-icon":"","ui-accordion-content":"","ui-accordion-content-active":""}})});
+    s</script>
     <script defer src="tab.js"></script>
     <script defer src="acord.js"></script>
     <script defer src="burger.js"></script>
