--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <script src="js/uikit.js"></script>
 </head>
 <body>
-<div class="arrow-left" uk-scrollspy="target: > *; cls: uk-animation-slide-bottom-small; delay: 200"><img src="img/arrow/arrow-left.png" alt=""></div>
-<div class="arrow-right"uk-scrollspy="target: > *; cls: uk-animation-slide-bottom-small; delay: 200"><img src="img/arrow/arrow-right.png" alt=""></div>
+<div class="arrow-left" uk-scrollspy="target: > *; cls: uk-animation-slide-bottom-small; delay: 200"><img src="img/arrow/arrow-left1.png" alt=""></div>
+<div class="arrow-right"uk-scrollspy="target: > *; cls: uk-animation-slide-bottom-small; delay: 200"><img src="img/arrow/arrow-right1.png" alt=""></div>
     
 <header class="head">
     <div class="uk-container uk-text-center">
