--- a/source/Modzho/Suvenir.html
+++ b/source/Modzho/Suvenir.html
@@ -38,12 +38,12 @@
             </div>
             <div class="head-center uk-visible@m">
                 <ul class="uk-navbar-nav">
-                    <li class=""><a href="services.html" class="uk-text-bolder">Печать на одежде</a></li>
-                    <li class=""><a href="suvenir.html" class="uk-text-bolder">Сувениры</a></li>
-                    <li class=""><a href="tree.html" class="uk-text-bolder">Дерево</a></li>
-                    <li class=""><a href="ideas.html" class="uk-text-bolder">Идеи</a></li>
+                    <li class=""><a href="Services.html" class="uk-text-bolder">Печать на одежде</a></li>
+                    <li class=""><a href="Suvenir.html" class="uk-text-bolder">Сувениры</a></li>
+                    <li class=""><a href="Tree.html" class="uk-text-bolder">Дерево</a></li>
+                    <li class=""><a href="Ideas.html" class="uk-text-bolder">Идеи</a></li>
                     <li class=""><a href="price.html" class="uk-text-bolder">Сроки и цены</a></li>
-                    <li class=""><a href="delivery.html" class="uk-text-bolder">Доставка</a></li>
+                    <li class=""><a href="Delivery.html" class="uk-text-bolder">Доставка</a></li>
                     <li class=""><a href="about.html" class="uk-text-bolder">О нас</a></li>
                     <li><a href="contacts.html" class="uk-text-bolder">Контакты</a></li>
                 </ul>
