--- a/source/Modzho/aboutUs.html
+++ b/source/Modzho/aboutUs.html
@@ -40,11 +40,11 @@
                 <ul class="uk-navbar-nav">
                     <li class=""><a href="Services.html" class="uk-text-bolder">Печать на одежде</a></li>
                     <li class=""><a href="Suvenir.html" class="uk-text-bolder">Сувениры</a></li>
-                    <li class=""><a href="TShirts.html" class="uk-text-bolder">Дерево</a></li>
+                    <li class=""><a href="Tree.html" class="uk-text-bolder">Дерево</a></li>
                     <li class=""><a href="Ideas.html" class="uk-text-bolder">Идеи</a></li>
                     <li class=""><a href="price.html" class="uk-text-bolder">Сроки и цены</a></li>
                     <li class=""><a href="Delivery.html" class="uk-text-bolder">Доставка</a></li>
-                    <li class=""><a href="aboutUs.html" class="uk-text-bolder">О нас</a></li>
+                    <li class=""><a href="about.html" class="uk-text-bolder">О нас</a></li>
                     <li><a href="contacts.html" class="uk-text-bolder">Контакты</a></li>
                 </ul>
             </div>
