--- a/index.html
+++ b/index.html
@@ -139,5 +139,6 @@
     </footer>
     <script src="fg.js"></script>
     <script src="ffff.js"></script>
+    <script src="parse.js"></script>
   </body>
 </html>
